Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'Jenny'"
+    "name = 'Jenny'\n",
+    "what = 'love'\n"
    ]
   },
   {
