Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Jenny'\n",
-    "what = 'love'\n"
+    "what = 'love'"
    ]
   },
   {
