Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,22 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'I love Jenny'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "howmuch = \"so so \""
+    "\"I\" + \" \" + what + \" \" + name"
    ]
   },
   {
