Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"I\" + \" \" + what + \" \" + name"
+    "\"I\" + \" \" + what + \" \" + name \" \""
    ]
   },
   {
