Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,9 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I love Jenny so so so so so so so much'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"I\" + \" \" + what + \" \" + name + \" \" + howmuch"
    ]
