--- a/index.ipynb
+++ b/index.ipynb
@@ -224,22 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'bob'"
+       "'i love bob'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"i love \""
+    "\"i love \" + name"
    ]
   },
   {
